# docky

./: .gitignore  AUTHORS  COPYRIGHT  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  build.rules.common.mk  build.rules.core.mk  build.rules.docklets.mk  configure  configure.ac
Docky/: AssemblyInfo.cs  AssemblyInfo.cs.in  Docky.addins  Makefile.am  Makefile.in  docky.in
Docky.CairoHelper/: Makefile.am  Makefile.in  docky.cairohelper.pc.in
Docky.CairoHelper/Cairo/: Color_Extensions.cs  Context_Extensions.cs
Docky.CairoHelper/Docky.CairoHelper/: DockySurface.cs  Util.cs
Docky.DBus/: Makefile.am  Makefile.in
Docky.DBus/Docky.DBus/: DBusManager.cs  DockManagerDBus.cs  DockManagerDBusItem.cs  DockyDBus.cs  IDockManagerDBus.cs  IDockManagerDBusItem.cs  IDockyDBus.cs  RemoteFileMenuEntry.cs  RemoteMenuEntry.cs
Docky.Items/: Makefile.am  Makefile.in  docky.items.pc.in
Docky.Items/Docky.Items/: AbstractDockItem.cs  AbstractDockItemProvider.cs  ActivityIndicator.cs  ApplicationDockItem.cs  ClickAnimation.cs  ColoredIconDockItem.cs  CurrentItemChangedArgs.cs  Enumerable_Extensions.cs  FileApplicationProvider.cs  FileDockItem.cs  IconDockItem.cs  IconEmblem.cs  ItemState.cs  ItemsChangedArgs.cs  PaintNeededEventArgs.cs  PainterRequestEventArgs.cs  ProxyDockItem.cs  WindowDockItem.cs  WnckDockItem.cs
Docky.Items/Docky.Menus/: IconMenuItem.cs  MenuItem.cs  MenuList.cs  ProxyMenuItem.cs  SeparatorMenuItem.cs  WindowMenuItem.cs
Docky.Items/Docky.Painters/: AbstractDockPainter.cs  PagingDockPainter.cs
Docky.Items/Resources/: Docky.Items.addin.xml
Docky.Services/: AssemblyInfo.cs  AssemblyInfo.cs.in  Docky.Services.dll.config  Makefile.am  Makefile.in  docky.services.pc.in
Docky.Services/Docky.Services/: ConnectionStatusChangeEventArgs.cs  DesktopItemService.cs  DockServices.cs  DrawingService.cs  HelperService.cs  Log.cs  LogTSender.cs  NativeInterop.cs  NotificationService.cs  PathsService.cs  PreferencesService.cs  SystemService.cs  ThemeService.cs  WindowMatcherService.cs
Docky.Services/Docky.Services/Applications/: DesktopFileChangedEventArgs.cs  DesktopItem.cs
Docky.Services/Docky.Services/Extensions/: GLibFileExtension.cs  GLibMountExtension.cs  GdkPixbufExtension.cs  GtkIconThemeExtension.cs  WnckWindowExtension.cs
Docky.Services/Docky.Services/Helpers/: Helper.cs  HelperMetadata.cs  HelperStatusChangedEventArgs.cs
Docky.Services/Docky.Services/Logging/: ConsoleCrayon.cs  ConsoleLog.cs  LogBase.cs
Docky.Services/Docky.Services/Preferences/: IPreferences.cs  Preferences.cs  PreferencesChangedEventArgs.cs
Docky.Services/Docky.Services/Windows/: Position.cs  WindowControl.cs
Docky.Services/Docky.Services/Xlib/: X11Atoms.cs  Xlib.cs
Docky.Services/GLibSharp/: AsyncReadyCallbackNative.cs
Docky.Services/Gtk/: MountOperation.cs
Docky.Widgets/: AssemblyInfo.cs  Docky.Widgets.dll.config  Makefile.am  Makefile.in  docky.widgets.pc.in
Docky.Widgets/Docky.Widgets/: AbstractLoginWidget.cs  AbstractTileObject.cs  ConfigDialog.cs  HoverImageButton.cs  IConfig.cs  ListOnlyTileView.cs  SearchEntry.cs  Tile.cs  TileView.cs  WrapLabel.cs
Docky.Widgets/Resources/: Docky.Widgets.addin.xml
Docky.Widgets/gtk-gui/: Docky.Widgets.AbstractLoginWidget.cs
Docky/Docky/: ConfigurationWindow.cs  DockController.cs  DockletTile.cs  Docky.cs  HelperTile.cs  PluginManager.cs  UserArgs.cs
Docky/Docky/CairoHelper/: DockySurface_Extensions.cs
Docky/Docky/Interface/: AnimationState.cs  AutohideManager.cs  AutohideType.cs  CursorPostionChangedArgs.cs  CursorTracker.cs  Dock.cs  DockDragTracker.cs  DockPosition.cs  DockPreferences.cs  DockWindow.cs  HoverTextManager.cs  HoveredItemChangedArgs.cs  IDockPreferences.cs  ItemProvidersChangedEventArgs.cs  PoofWindow.cs
Docky/Docky/Items/: DockyItem.cs  INonPersistedItem.cs  SeparatorItem.cs  SpacingItem.cs
Docky/Docky/Menus/: DockItemMenu.cs  DockMenu.cs  MenuItemWidget.cs  SeparatorWidget.cs
Docky/Gtk/: Widget_Extensions.cs
Docky/Mono/: Options.cs
Docky/gtk-gui/: Docky.ConfigurationWindow.cs  Docky.Interface.DockPreferences.cs  gui.stetic
StandardPlugins/: Makefile.am  Makefile.in
StandardPlugins/BatteryMonitor/: Makefile.am  Makefile.in
StandardPlugins/BatteryMonitor/Resources/: BatteryMonitor.addin.xml
StandardPlugins/BatteryMonitor/src/: BatteryMonitorAbstractItem.cs  BatteryMonitorItemProvider.cs  BatteryMonitorProcItem.cs  BatteryMonitorSysItem.cs  BatteryMonitorUPowerItem.cs
StandardPlugins/Bookmarks/: Makefile.am  Makefile.in
StandardPlugins/Bookmarks/Resources/: Bookmarks.addin.xml.in
StandardPlugins/Bookmarks/src/: BookmarksItemProvider.cs
StandardPlugins/CPUMonitor/: Makefile.am  Makefile.in
StandardPlugins/CPUMonitor/Resources/: CPUMonitor.addin.xml
StandardPlugins/CPUMonitor/src/: CPUMonitorDockItem.cs  CPUMonitorItemProvider.cs
StandardPlugins/Clippy/: Makefile.am  Makefile.in
StandardPlugins/Clippy/Resources/: Clippy.addin.xml.in
StandardPlugins/Clippy/src/: ClippyItem.cs  ClippyItemProvider.cs  ClippyMenuItem.cs
StandardPlugins/Clock/: Makefile.am  Makefile.in
StandardPlugins/Clock/Resources/: Clock.addin.xml
StandardPlugins/Clock/Themes/: Makefile.am  (+1 more)
StandardPlugins/Desktop/: Makefile.am  Makefile.in
StandardPlugins/GMail/: Makefile.am  Makefile.in
StandardPlugins/Mounter/: Makefile.am  Makefile.in
StandardPlugins/NPR/: Makefile.am  Makefile.in
StandardPlugins/NetworkManager/: Makefile.am  Makefile.in
StandardPlugins/NetworkMonitor/: Makefile.am  Makefile.in
StandardPlugins/RecentDocuments/: Makefile.am  Makefile.in
StandardPlugins/SessionManager/: Makefile.am  Makefile.in
StandardPlugins/Timer/: Makefile.am  Makefile.in
StandardPlugins/Trash/: Makefile.am  Makefile.in
StandardPlugins/Weather/: Makefile.am  Makefile.in
StandardPlugins/WorkspaceSwitcher/: Makefile.am  Makefile.in
data/: Makefile.am  Makefile.in  docky.desktop.in  docky.schemas.in  remaps.ini
data/icons/: Makefile.in
data/themes/: Makefile.am  Makefile.in
lib/wnck-sharp1/: AssemblyInfo.cs  Makefile.am  Makefile.in  Wnck.metadata  wnck-api.raw  wnck-sharp1.dll.config
(+230 files in other folders)
