SUBDIRS = \
	BatteryMonitor \
	Bookmarks \
	Clippy \
	Clock \
	Desktop \
	CPUMonitor \
	GMail \
	Mounter \
	NetworkManager \
	NetworkMonitor \
	NPR \
	RecentDocuments \
	SessionManager \
	Timer \
	Trash \
	Weather \
	WorkspaceSwitcher

DIST_SUBDIRS = \
	BatteryMonitor \
	Bookmarks \
	Clippy \
	Clock \
	Desktop \
	CPUMonitor \
	GMail \
	Mounter \
	NetworkManager \
	NetworkMonitor \
	NPR \
	RecentDocuments \
	SessionManager \
	Timer \
	Trash \
	Weather \
	WorkspaceSwitcher

