SUBDIRS = \
	Bookmarks \
	Clippy \
	Clock \
	Desktop \
	CPUMonitor \
	Mounter \
	RecentDocuments \
	Timer \
	Trash \
	Weather \
	WorkspaceSwitcher

DIST_SUBDIRS = \
	Bookmarks \
	Clippy \
	Clock \
	Desktop \
	CPUMonitor \
	Mounter \
	RecentDocuments \
	Timer \
	Trash \
	Weather \
	WorkspaceSwitcher

